@startuml
interface Subject{
  void registerObserver(Observer)
  void removeObserver(Observer)
  void notifyObservers()
}
class WeatherData{
  private ArrayList observers
  private float temperature
  private float humidity
  private float pressure

  void registerObserver(Observer)
  void removeObserver(Observer)
  void notifyObservers()

  void measurementChanged()
  void setMeasurement(float temperature, float humidity, float pressure)
}
interface Observer{
  void update(float temperature, float humidity, float pressure)
}
interface DisplayElement{
  void display()
}
class ForecastDisplay{
  private Subject weatherData
  private float temperature
  private float humidity
  private float pressure

  void update(float temperature, float humidity, float pressure)
  void diplay()
}
class CurrentConditionsDisplay{
  private Subject weatherData
  private float temperature
  private float humidity

  void update(float temperature, float humidity, float pressure)
  void diplay()
}

Subject <|.. WeatherData
Subject --* Observer
Subject *-- ForecastDisplay
Subject *-- CurrentConditionsDisplay

Observer <|.. ForecastDisplay
Observer <|.. CurrentConditionsDisplay

DisplayElement <|.. ForecastDisplay
DisplayElement <|.. CurrentConditionsDisplay
@enduml